[package]
name = "hash_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
murmurhash3 = "0.0.5"
criterion = "0.5"
num-traits = "0.2.19"
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.9.0"
md5hash = "0.1.1"

[[bench]]
name = "bloom_filter"
harness = false

[[bench]]
name = "hash_ring"
harness = false
